task 3 fix overflow

--- a/style/style_main.css
+++ b/style/style_main.css
@@ -102,7 +102,7 @@
     top: 125px;
     left: 20px;
     border-radius: 100px;
-    z-index: 10;
+    overflow: hidden;
 }
 .task_3__wrap_background{
     position: absolute;
